gtaxl: Import some sepolicy and Bluetooth-related improvements from my fixes for 12
...including the switching of the wcnss_filter binary to one built from
new sources.

Change-Id: I37d8e2aa9add0ccbde4cab16b8b858b8f847519f

--- a/rootdir/init.samsungexynos7870.rc
+++ b/rootdir/init.samsungexynos7870.rc
@@ -220,10 +220,10 @@ service charger /system/bin/charger
     seclabel u:r:charger:s0
 
 # Bluetooth
-on property:wc_transport.start_hci=true
+on property:vendor.wc_transport.start_hci=true
     start start_hci_filter
 
-on property:wc_transport.start_hci=false
+on property:vendor.wc_transport.start_hci=false
     stop start_hci_filter
 
 service start_hci_filter /vendor/bin/wcnss_filter
