gtaxl-common: Have KeyDisabler use a new sysfs node for enabling/disabling touchkey input
Fixes an issue where enabling the "Enable on-screen nav bar" setting at
Settings -> System -> Buttons (at least) would cause touchscreen input
to also not work as it was disabled along with the touchkeys through the
default node, since input from them is provided by the same driver and
touchscreen controller, through only one unified input.

Something of note is that through the new sysfs node, touchkey input is
technically accepted or ignored, rather than enabled or disabled, since
it can't be disabled properly separately from touchscreen input in
hardware.

Change-Id: I1734c69e690155e35803efeec58aea1d4e2fe342

--- a/rootdir/init.samsungexynos7870.rc
+++ b/rootdir/init.samsungexynos7870.rc
@@ -176,6 +176,7 @@ on fs
 
     # Permissions for touchkey
     chown system radio /sys/class/sec/sec_touchkey/brightness
+    chown system system /sys/class/sec/sec_touchkey/touchkeys_enabled
     chown system system /sys/class/sec/sec_touchkey/input/enabled
 
     # Permissions for gpio_keys
